--- a/build.gradle
+++ b/build.gradle
@@ -9,13 +9,13 @@ buildscript {
     }
 }
 
+group = 'jroadie.springframework.data'
+version = '0.0.1-SNAPSHOT'
+
 apply plugin: 'java'
-apply plugin: 'maven'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
-
-group = 'jroadie.springframework.data.example'
-version = '0.0.1-SNAPSHOT'
+apply plugin: 'maven-publish'
 
 sourceCompatibility = 1.8
 
@@ -27,5 +27,13 @@ repositories {
 }
 
 dependencies {
-    compile 'com.graphql-java:graphql-java:6.0'
+
+}
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+        }
+    }
 }
