--- a/build.gradle
+++ b/build.gradle
@@ -18,16 +18,13 @@ apply plugin: 'io.spring.dependency-management'
 apply plugin: 'maven-publish'
 
 sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 repositories {
     mavenLocal()
     mavenCentral()
     maven { url "https://repo.spring.io/snapshot" }
     maven { url "https://repo.spring.io/milestone" }
-}
-
-dependencies {
-
 }
 
 publishing {
