--- a/spring-boot-starter-graphql/build.gradle
+++ b/spring-boot-starter-graphql/build.gradle
@@ -4,13 +4,16 @@ version '0.0.1-SNAPSHOT'
 apply plugin: 'java'
 
 sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 repositories {
+    mavenLocal()
     mavenCentral()
+    maven { url "https://repo.spring.io/snapshot" }
+    maven { url "https://repo.spring.io/milestone" }
 }
 
 dependencies {
     compile "org.springframework.boot:spring-boot-starter:$springBootVersion"
-    compile "org.springframework.boot:spring-boot-autoconfigure-graphql:$project.version"
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    //compile "org.springframework.boot:spring-boot-autoconfigure-graphql:$project.version"
 }
