--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
 rootProject.name = 'spring-boot-graphql'
-include 'spring-boot-autoconfigure-graphql'
-include 'spring-boot-starter-graphql'
-include 'spring-graphql'
+include ':spring-boot-autoconfigure-graphql'
+include ':spring-boot-starter-graphql'
+include ':spring-graphql'
