--- a/examples/social-media/build.gradle
+++ b/examples/social-media/build.gradle
@@ -27,8 +27,10 @@ repositories {
 }
 
 dependencies {
-    compile 'org.springframework.boot:spring-boot-starter-web'
     compile 'jroadie.springframework.boot:spring-boot-starter-graphql:0.0.1-SNAPSHOT'
+    compile 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+    runtime "com.h2database:h2"
 
     testCompile 'org.springframework.boot:spring-boot-starter-test'
 }
