--- a/graphql-spring-boot-autoconfigure/build.gradle
+++ b/graphql-spring-boot-autoconfigure/build.gradle
@@ -2,5 +2,5 @@ dependencies {
     compile "org.springframework.boot:spring-boot:$springBootVersion"
     compile "org.springframework.boot:spring-boot-autoconfigure:$springBootVersion"
     compile "org.springframework.boot:spring-boot-configuration-processor:$springBootVersion"
-    compile "jroadie.springframework:spring-graphql:$project.version"
+    compile "jroadie.springframework:graphql-spring:$project.version"
 }
