--- a/examples/social-media/build.gradle
+++ b/examples/social-media/build.gradle
@@ -10,6 +10,7 @@ buildscript {
 }
 
 apply plugin: 'java'
+apply plugin: 'groovy'
 apply plugin: 'maven'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
@@ -32,5 +33,6 @@ dependencies {
 
     runtime "com.h2database:h2"
 
+    testCompile 'org.codehaus.groovy:groovy-all:2.4.13'
     testCompile 'org.springframework.boot:spring-boot-starter-test'
 }
