--- a/examples/social-media/build.gradle
+++ b/examples/social-media/build.gradle
@@ -15,7 +15,7 @@ apply plugin: 'maven'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
-group = 'jroadie.springframework.boot.graphql.example'
+group = 'graphql4j.springframework.boot.graphql.example'
 version = '1.0.0-alpha'
 
 sourceCompatibility = 1.8
@@ -28,7 +28,7 @@ repositories {
 }
 
 dependencies {
-    compile 'jroadie.springframework.boot:graphql-spring-boot-starter:0.0.1-SNAPSHOT'
+    compile 'graphql4j.springframework.boot:spring-boot-starter-graphql:2.0.0.M7-SNAPSHOT'
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
 
     runtime "com.h2database:h2"
