--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,7 @@
-rootProject.name = 'graphql-spring-boot'
-include ':graphql-spring-boot-autoconfigure'
-include ':graphql-spring-boot-starter'
-include ':graphql-spring'
+rootProject.name = 'spring-boot-graphql'
+include ':spring-boot-autoconfigure-graphql'
+include ':spring-boot-starter-graphql'
 include ':graphql4j'
 project(':graphql4j').projectDir = file('../graphql4j')
+include ':spring-graphql'
+project(':spring-graphql').projectDir = file('../spring-graphql')
