--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,4 @@
-springBootVersion=2.0.0
+group=graphql4j.springframework.boot
+version=2018.3.27-SNAPSHOT
+springBootVersion=2.0.0.RELEASE
 graphql4jVersion=2018.3.27-SNAPSHOT
